dentist query
