# app_dentist/demo/static/v1/swagger.json
@@ -84,29 +84,12 @@
           {
             "name": "name",
             "in": "query",
-            "type": "string",
-            "description": "dentist name insentitve case"
-          },
-          {
-            "name": "work_day",
-            "type": "string",
-            "in": "query",
-            "description": "day name of week",
-            "enum": [
-              "Monday",
-              "Tuesday",
-              "Wednesday",
-              "Thursday",
-              "Friday",
-              "Saturday",
-              "Sunday"
-            ]
+            "type": "string"
           },
           {
             "name": "location",
             "in": "query",
-            "type": "string",
-            "description": "suburb name, insentitve case"
+            "type": "string"
           }
         ],
         "responses": {
@@ -304,32 +287,6 @@
         "status": {
           "type": "string",
           "pattern": "^(Available|Reserved)$"
-        }
-      }
-    },
-    "Dentist_filter": {
-      "type": "object",
-      "properties": {
-        "name": {
-          "type": "string",
-          "description": "dentist name insentitve case"
-        },
-        "work_day": {
-          "type": "string",
-          "description": "day name of week",
-          "enum": [
-            "Monday",
-            "Tuesday",
-            "Wednesday",
-            "Thursday",
-            "Friday",
-            "Saturday",
-            "Sunday"
-          ]
-        },
-        "location": {
-          "type": "string",
-          "description": "insentitve case"
         }
       }
     }
